--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,9 @@
-pandas numpy matplotlib seaborn scikit-learn joblib streamlit shap xgboost missingno
+pandas
+numpy
+matplotlib
+seaborn
+scikit-learn
+joblib
+streamlit
+shap
+xgboost
